--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=baks.adm.Baks
+main.class=adm.Baks.Baks
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
