--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Baks
+application.vendor=RobertM
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,22 +27,23 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Baks.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.5.jar=itextpdf-5.5.5.jar
-file.reference.jcalendar-1.2.2.jar=C:\\Users\\Robert M\\Downloads\\jcalendar-1.2.2.jar\\jcalendar-1.2.2.jar
+file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
 file.reference.postgresql-9.4-1201.jdbc4.jar=postgresql-9.4-1201.jdbc4.jar
-file.reference.sqljdbc.jar=C:\\Users\\Robert M\\Downloads\\sqljdbc_4.0.2206.100_enu\\sqljdbc_4.0\\enu\\sqljdbc.jar
-file.reference.sqljdbc4.jar=C:\\Users\\Robert M\\Downloads\\sqljdbc_4.0.2206.100_enu\\sqljdbc_4.0\\enu\\sqljdbc4.jar
+file.reference.sqljdbc.jar=sqljdbc.jar
+file.reference.sqljdbc4.jar=sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.sqljdbc.jar}:\
-    ${file.reference.jcalendar-1.2.2.jar}:\
     ${file.reference.postgresql-9.4-1201.jdbc4.jar}:\
-    ${file.reference.itextpdf-5.5.5.jar}
+    ${file.reference.itextpdf-5.5.5.jar}:\
+    ${file.reference.jcalendar-1.2.2.jar}:\
+    ${file.reference.sqljdbc.jar}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,5 +83,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+src.BinSrc.dir=BinSrc
 src.dir=src
 test.src.dir=test
