--- a/BinSrc/Baks.properties
+++ b/BinSrc/Baks.properties
@@ -7,5 +7,8 @@ panelBtnColor = #626C5A
 panelBackgroundColor = #C5B6AA
 mainBackgroundColor = #A4B497
 tabPaneBorderColor = #20241E
-brownCiemny = #CDE2BD
+brownCiemny = #B8A48E
+brownJasny = #C5B6AA
+greenCiemny = #B8CBAA
+greenJasny = #CDE2BD
 
