praca dodanie funkcjonalnosci

--- a/BinSrc/Baks.properties
+++ b/BinSrc/Baks.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-dbName = ec2-54-163-234-163.compute-1.amazonaws.com:5432/dcl0smkhcbr09u?user=dlyfimxfykibq
+dbName = ec2-54-163-234-163.compute-1.amazonaws.com:5432/dcl0smkhcbr09u?user=dlyfimxfykibqv
 panelBtnColor = #626C5A
 panelBackgroundColor = #C5B6AA
 mainBackgroundColor = #A4B497
@@ -11,4 +11,5 @@ brownCiemny = #B8A48E
 brownJasny = #C5B6AA
 greenCiemny = #B8CBAA
 greenJasny = #CDE2BD
+blue = #CEE5FD
 
